syntax = "proto3";

package calculator.v1;

option go_package = "./internal/pb/";

// CalculatorService defines the gRPC service for performing basic arithmetic operations.
service CalculatorService {
    // Add number1 and number2 and return the result.
    rpc Add(CalculationRequest) returns (CalculationResponse);
    // Subtract number2 from number1 and return the result.
    rpc Subtract(CalculationRequest) returns (CalculationResponse);
    // Multiply number1 and number2 and return the result.
    rpc Multiply(CalculationRequest) returns (CalculationResponse);
    // Divide number1 by number2 and return the result. If number2 is zero, an error should be returned.
    rpc Divide(CalculationRequest) returns (CalculationResponse);
    // Average streams a sequence of numbers from the client and returns the average once the client has finished sending numbers.
    rpc Average(stream AverageRequest) returns (CalculationResponse);
    // Multiplication Table takes a single number and returns a stream of results for the multiplication table of that number from 1 to 12.
    rpc MultiplicationTable(MultiplicationTableRequest) returns (stream CalculationResponse);
}

// CalculationRequest contains the two numbers to be calculated.
message CalculationRequest {
    double number1 = 1;
    double number2 = 2;
}

// CalculationResponse contains the result of the calculation.
message CalculationResponse {
    double result = 1;
}

message AverageRequest {
    double number = 1;
}

message MultiplicationTableRequest {
    double number = 1;
}